--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,15 @@ body{
   font-family: "Barlow", sans-serif;
   padding: 0;
 }
-
+.swal2-confirm{
+    background-color: #172983;
+    color: white;
+    font-size: 16px;
+    border: solid 1px #EDEDED;
+    padding: 10px 20px;
+    border-radius: 1px;
+    cursor: pointer;
+    margin: 10px;
+    height: 50px;
+    width: 250px;
+}
